# student-experiment

./: CMakeLists.txt  readme.md  run.sh
include/: localdata.h  output.h  proc.h  stat.h
lib/: localdada.cpp  localdata.cpp  output.cpp  proc.cpp  stat.cpp
src/: main.cpp
